--- a/linguistik/exam.html
+++ b/linguistik/exam.html
@@ -2602,7 +2602,7 @@ user-select: none;
 </tr>
 <tr class="odd">
 <td><strong>Abgabe</strong></td>
-<td>Am Ende haben Sie 10 Minuten, um Ihre Antwortblätter als <em>eine</em> PDF-Datei einzuscannen, mit Ihrer <em>Studierendennummer</em> zu benennen und unter folgendem QR-Code hochzuladen. Verspätete Abgabe führt zum Abzug von 10 Punkten/10 Minuten.</td>
+<td>Am Ende haben Sie 10 Minuten, um Ihre Antwortblätter als <em>eine</em> PDF-Datei einzuscannen, mit Ihrem <em>Namen</em> und Ihrer <em>Studierendennummer</em> (<em>Jach_Daniel_12345</em>) zu benennen und unter folgendem QR-Code hochzuladen. Verspätete Abgabe führt zum Abzug von 10 Punkten/10 Minuten.</td>
 </tr>
 </tbody>
 </table>
