--- a/landeskunde/book/wo-ist-deutschland.html
+++ b/landeskunde/book/wo-ist-deutschland.html
@@ -69,7 +69,7 @@
 
 <ul class="summary">
 <li><a href="./">Landeskunde</a></li>
-<img src="./_material/karte-metro-berlin.png" style="width:100%;">
+<img src="./material/karte-metro-berlin.png" style="width:100%;">
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Zum Einstieg</a></li>
@@ -117,7 +117,7 @@
 1
 </task>
 <p>Wo ist China? Wo ist Deutschland? Finden Sie die Länder auf der Weltkarte!</p>
-<p><img src="_material/Karte-Welt.png" /></p>
+<p><img src="material/Karte-Welt.png" /></p>
 <time>00:05 – 00:15</time>
 <task>
 2
@@ -158,7 +158,7 @@
 <task>
 3
 </task>
-<p>Lesen Sie den <a href="_material/text-deutschland-lage-und-bevölkerung.pdf">Text</a> über Deutschland. Notieren Sie die Antworten aus dem Text in Ihrer Tabelle oder recherchieren Sie im Internet. Arbeiten Sie mit Ihrer Partnerin. Lesen Sie den Text dann noch einmal und erweitern Sie Ihre Tabelle und ergänzen Sie Antworten für Deutschland und China.</p>
+<p>Lesen Sie den <a href="material/text-deutschland-lage-und-bevölkerung.pdf">Text</a> über Deutschland. Notieren Sie die Antworten aus dem Text in Ihrer Tabelle oder recherchieren Sie im Internet. Arbeiten Sie mit Ihrer Partnerin. Lesen Sie den Text dann noch einmal und erweitern Sie Ihre Tabelle und ergänzen Sie Antworten für Deutschland und China.</p>
 <hr />
 <time>00:45 – 00:50</time>
 <task>
@@ -170,13 +170,13 @@ Pause
 4
 </task>
 <p>Schauen Sie das Video <em>Deutschland von oben</em>. Was sehen Sie? Sammeln Sie im Plenum.</p>
-<p><video src="_material/video-deutschland-von-oben.mp4" controls=""><a href="_material/video-deutschland-von-oben.mp4">Video</a></video></p>
+<p><video src="material/video-deutschland-von-oben.mp4" controls=""><a href="material/video-deutschland-von-oben.mp4">Video</a></video></p>
 <time>00:55 – 00:75</time>
 <task>
 5
 </task>
 <p>Sehen Sie die folgende Karte von Deutschland genau an und bearbeiten Sie dann die Aufgaben in kleinen Gruppen. Wenn nötig, recherchieren Sie im Internet.</p>
-<p><img src="_material/karte-deutschland-a.png" /></p>
+<p><img src="material/karte-deutschland-a.png" /></p>
 <ul>
 <li>Finden Sie die im Text in den blauen <em>Auf einen Blick</em>-Kästen erwähnten Berge, Flüsse und Seen und markieren Sie die Namen auf der Karte.</li>
 <li>Ergänzen Sie die deutschen Meere <em>Nordsee</em> und <em>Ostsee</em> auf der Karte.</li>
@@ -189,7 +189,7 @@ Pause
 4
 </task>
 <p>Betrachten Sie die folgende Karte. Sie zeigt die Verteilung der Bevölkerung in Deutschland. Welche Schlussfolgerungen können Sie aus der Karte ziehen? Überlegen und diskutieren Sie in kleinen Gruppen. Formulieren Sie drei Aussagen.</p>
-<p><img src="_material/karte-deutschland-bev%C3%B6lkerung.png" /></p>
+<p><img src="material/karte-deutschland-bev%C3%B6lkerung.png" /></p>
 <blockquote>
 <p>Die Karte zeigt, dass …<br />
 Nach dieser Karte wohnen / leben die meisten / nur wenige Deutsche …<br />
@@ -215,8 +215,8 @@ Hausaufgabe
 <td>Chinesisch</td>
 </tr>
 <tr class="even">
-<td><img src="_material/tatsachen-%C3%BCber-deutschland-deu-qr.png" style="width:75.0%" />)</td>
-<td><img src="_material/tatsachen-%C3%BCber-deutschland-zho-qr.png" style="width:75.0%" /></td>
+<td><img src="material/tatsachen-%C3%BCber-deutschland-deu-qr.png" style="width:75.0%" />)</td>
+<td><img src="material/tatsachen-%C3%BCber-deutschland-zho-qr.png" style="width:75.0%" /></td>
 </tr>
 </tbody>
 </table>
