--- a/landeskunde/book/index.html
+++ b/landeskunde/book/index.html
@@ -74,9 +74,7 @@
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Zum Einstieg</a></li>
 <li class="chapter" data-level="2" data-path="wo-ist-deutschland.html"><a href="wo-ist-deutschland.html"><i class="fa fa-check"></i><b>2</b> Wo ist Deutschland?</a></li>
-<li class="divider"></li>
-<!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
-
+<li class="chapter" data-level="3" data-path="wer-sind-die-deutschen.html"><a href="wer-sind-die-deutschen.html"><i class="fa fa-check"></i><b>3</b> Wer sind die Deutschen?</a></li>
 </ul>
 
       </nav>
@@ -162,8 +160,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/rstudio/bookdown-demo/edit/master/index.Rmd",
-"text": "Edit"
+"link": null,
+"text": null
 },
 "history": {
 "link": null,
@@ -173,7 +171,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["book.epub"],
+"download": null,
 "search": {
 "engine": "fuse",
 "options": null
