--- a/landeskunde/book/wo-ist-deutschland.html
+++ b/landeskunde/book/wo-ist-deutschland.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="index.html"/>
-
+<link rel="next" href="wer-sind-die-deutschen.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -74,9 +74,7 @@
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Zum Einstieg</a></li>
 <li class="chapter" data-level="2" data-path="wo-ist-deutschland.html"><a href="wo-ist-deutschland.html"><i class="fa fa-check"></i><b>2</b> Wo ist Deutschland?</a></li>
-<li class="divider"></li>
-<!-- <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li> -->
-
+<li class="chapter" data-level="3" data-path="wer-sind-die-deutschen.html"><a href="wer-sind-die-deutschen.html"><i class="fa fa-check"></i><b>3</b> Wer sind die Deutschen?</a></li>
 </ul>
 
       </nav>
@@ -227,8 +225,8 @@ Hausaufgabe
           </div>
         </div>
       </div>
-<a href="index.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="index.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="wer-sind-die-deutschen.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
@@ -259,8 +257,8 @@ gitbook.start({
 "size": 2
 },
 "edit": {
-"link": "https://github.com/rstudio/bookdown-demo/edit/master/01-wo-ist-deutschland.Rmd",
-"text": "Edit"
+"link": null,
+"text": null
 },
 "history": {
 "link": null,
@@ -270,7 +268,7 @@ gitbook.start({
 "link": null,
 "text": null
 },
-"download": ["book.epub"],
+"download": null,
 "search": {
 "engine": "fuse",
 "options": null
