--- a/landeskunde/book/index.html
+++ b/landeskunde/book/index.html
@@ -75,6 +75,7 @@
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Zum Einstieg</a></li>
 <li class="chapter" data-level="2" data-path="wo-ist-deutschland.html"><a href="wo-ist-deutschland.html"><i class="fa fa-check"></i><b>2</b> Wo ist Deutschland?</a></li>
 <li class="chapter" data-level="3" data-path="wer-sind-die-deutschen.html"><a href="wer-sind-die-deutschen.html"><i class="fa fa-check"></i><b>3</b> Wer sind die Deutschen?</a></li>
+<li class="chapter" data-level="4" data-path="wie-ticken-die-deutschen.html"><a href="wie-ticken-die-deutschen.html"><i class="fa fa-check"></i><b>4</b> Wie ticken die Deutschen?</a></li>
 </ul>
 
       </nav>
