--- a/landeskunde/book/404.html
+++ b/landeskunde/book/404.html
@@ -76,6 +76,7 @@
 <li class="chapter" data-level="2" data-path="wo-ist-deutschland.html"><a href="wo-ist-deutschland.html"><i class="fa fa-check"></i><b>2</b> Wo ist Deutschland?</a></li>
 <li class="chapter" data-level="3" data-path="wer-sind-die-deutschen.html"><a href="wer-sind-die-deutschen.html"><i class="fa fa-check"></i><b>3</b> Wer sind die Deutschen?</a></li>
 <li class="chapter" data-level="4" data-path="wie-ticken-die-deutschen.html"><a href="wie-ticken-die-deutschen.html"><i class="fa fa-check"></i><b>4</b> Wie ticken die Deutschen?</a></li>
+<li class="chapter" data-level="5" data-path="urlaub-in-deutschland.html"><a href="urlaub-in-deutschland.html"><i class="fa fa-check"></i><b>5</b> Ab in den Urlaub!</a></li>
 </ul>
 
       </nav>
