--- a/landeskunde/book/wie-ticken-die-deutschen.html
+++ b/landeskunde/book/wie-ticken-die-deutschen.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="wer-sind-die-deutschen.html"/>
-
+<link rel="next" href="urlaub-in-deutschland.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -76,6 +76,7 @@
 <li class="chapter" data-level="2" data-path="wo-ist-deutschland.html"><a href="wo-ist-deutschland.html"><i class="fa fa-check"></i><b>2</b> Wo ist Deutschland?</a></li>
 <li class="chapter" data-level="3" data-path="wer-sind-die-deutschen.html"><a href="wer-sind-die-deutschen.html"><i class="fa fa-check"></i><b>3</b> Wer sind die Deutschen?</a></li>
 <li class="chapter" data-level="4" data-path="wie-ticken-die-deutschen.html"><a href="wie-ticken-die-deutschen.html"><i class="fa fa-check"></i><b>4</b> Wie ticken die Deutschen?</a></li>
+<li class="chapter" data-level="5" data-path="urlaub-in-deutschland.html"><a href="urlaub-in-deutschland.html"><i class="fa fa-check"></i><b>5</b> Ab in den Urlaub!</a></li>
 </ul>
 
       </nav>
@@ -194,8 +195,8 @@ Hausaufgabe
           </div>
         </div>
       </div>
-<a href="wer-sind-die-deutschen.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="wer-sind-die-deutschen.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="urlaub-in-deutschland.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
