--- a/landeskunde/book/reisen-in-deutschland.html
+++ b/landeskunde/book/reisen-in-deutschland.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="urlaub-in-deutschland.html"/>
-
+<link rel="next" href="lernen-in-deutschland.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -78,6 +78,7 @@
 <li class="chapter" data-level="4" data-path="wie-ticken-die-deutschen.html"><a href="wie-ticken-die-deutschen.html"><i class="fa fa-check"></i><b>4</b> Wie ticken die Deutschen?</a></li>
 <li class="chapter" data-level="5" data-path="urlaub-in-deutschland.html"><a href="urlaub-in-deutschland.html"><i class="fa fa-check"></i><b>5</b> Ab in den Urlaub!</a></li>
 <li class="chapter" data-level="6" data-path="reisen-in-deutschland.html"><a href="reisen-in-deutschland.html"><i class="fa fa-check"></i><b>6</b> Eine Reise durch Deutschland planen</a></li>
+<li class="chapter" data-level="7" data-path="lernen-in-deutschland.html"><a href="lernen-in-deutschland.html"><i class="fa fa-check"></i><b>7</b> Welcome to the Jungle: Lernen und studieren in Deutschland</a></li>
 </ul>
 
       </nav>
@@ -109,33 +110,20 @@
 </tr>
 <tr class="even">
 <td><strong>Lernziele</strong></td>
-<td>Sie sind in der Lage, eine Reise durch Deutschland zu organisieren.</td>
+<td>Sie kennen Reisemöglichkeiten und können über Vor- und Nachteile diskutieren. Sie sind in der Lage, eine Reise durch Deutschland zu organisieren.</td>
 </tr>
 </tbody>
 </table>
-<time>00:00 – 00:10</time>
+<task>
+Arbeitsauftrag
+</task>
+<p>Planen Sie eine Städtereise durch Deutschland in kleinen Gruppen. Besuchen Sie <strong>alle Städte</strong>, die Sie letzte Woche kennengelernt haben (<em>Berlin</em>, <em>München</em>, <em>Leipzig</em>, <em>Hamburg</em> und <em>Köln</em>). Suchen Sie online nach Reisemöglichkeiten und machen Sie einen detaillierten Reiseplan. Ihre Reise beginnt am 01. April 2023 und dauert zwei Wochen. Versuchen Sie entweder <strong>möglichst billig</strong> (Gesamtpreis für Transport) oder <strong>möglichst schnell</strong> (Gesamtzeit <em>on the road</em>) zu reisen.</p>
+<p>Wie können Sie überhaupt durch Deutschland reisen? Am besten machen Sie es wie die Deutschen. Aber wie machen es die Deutschen?</p>
+<time>00:05 – 00:25</time>
 <task>
 1
 </task>
-<p>Zum Einstieg zwei kleine Rätsel: Was ist ein <em>Geisterfahrer</em>? Beraten Sie mit Ihrer Partnerin und vermuten Sie.</p>
-<table>
-<tbody>
-<tr>
-<td>
-<ol style="list-style-type: lower-alpha">
-<li>Ein Autofahrer, der oft von einer auf die andere Spur wechselt.</li>
-<li>Ein Autofahrer, der in die verkehrte Richtung fährt.</li>
-<li>Ein Autofahrer, der auf der Autobahn zu langsam fährt.</li>
-<li>Ein Autofahrer, der heimlich ohne Führerschein fährt.</li>
-</ol>
-</td>
-<td style="width:33%;">
-<img src="material/geist.png" style="width:80.0%" />
-</td>
-</tr>
-</tbody>
-</table>
-<p>Wie häufig benutzen die Deutschen verschiedene Verkehrsmittel? Vermuten Sie!</p>
+<p>Vermuten Sie: Wie häufig benutzen die Deutschen verschiedene Verkehrsmittel?</p>
 <blockquote>
 <p>Auto fahren – Bus oder Bahn nehmen – Zu Fuß gehen – Im Auto mitfahren – Fahrrad fahren</p>
 </blockquote>
@@ -146,37 +134,48 @@ Antwort
 </summary>
 <img src="book_files/figure-html/verkehrsmittelPlotLabels-1.png" width="672" />
 </details>
-<time>00:10 – 00:25</time>
+<p>Das Auto ist für <a href="https://www.facebook.com/FreieFahrt/">viele Deutsche</a> mehr als ein Transportmittel. Sie lieben ihr Auto. Schnelles Fahren im eigenen Auto bedeutet für sie: Freiheit! <a href="https://www.adac.de/verkehr/standpunkte-studien/positionen/tempolimit-autobahn-deutschland/">Viele andere Deutsche</a> wünschen sich dagegen ein allgemeine Begrenzung der Geschwindigkeit auf Autobahnen (Tempolimit). Schauen Sie das Video an. Welche Gründe werden für, welche gegen ein Tempolimit angeführt?</p>
+<table>
+<tbody>
+<tr class="odd">
+<td><img src="material/shirt_freie-fahrt.webp" /></td>
+<td><video src="material/tempolimit.mp4" controls=""><a href="material/tempolimit.mp4">Video</a></video></td>
+</tr>
+</tbody>
+</table>
+<p>Was meinen Sie? Sollte ein Tempolimit eingeführt werden? Wie ist das in China? Teilen Sie Ihre Meinung im Plenum.</p>
+<time>00:25 – 00:45</time>
 <task>
 2
 </task>
-<p>Deutschland ist ein Land für Autofahrer, ein Autofahrerland. Andere Verkehrsteilnehmer müssen dem Auto oft Platz machen. Sehen Sie sich das folgende Video mit dem Titel <em>Autofahren in Deutschland</em> an. Schauen Sie das Video dann noch einmal an und beantworten Sie die Fragen auf dem <a href="material/autofahrerland-arbeitsblatt.pdf">Arbeitsblatt</a>.</p>
-<p><video src="material/autofahrerland-video.webm" controls=""><a href="material/autofahrerland-video.webm">Video</a></video></p>
-<time>00:25 – 00:40</time>
-<task>
-3
-</task>
-<p>Wie können Sie in Deutschland reisen, wenn Sie kein eigenes Auto haben? Mit Bus oder Bahn natürlich. Sehen Sie sich das folgende Video an. Schauen Sie das Video dann noch einmal an und bearbeiten Sie das <a href="material/arbeitsblatt-bus-bahn.pdf">Arbeitsblatt</a>.</p>
+<p>Oder Sie fahren mit dem Bus oder mit der Bahn. Viele Deutsche sind unzufrieden mit der Deutschen Bahn und machen gern Witze:</p>
+<blockquote>
+<p>Läuft dein Leben stets nach Plan, fährst du selten Deutsche Bahn.<br />
+Die Deutsche Bahn hat eigentlich nur vier Probleme: Frühling, Sommer, Herbst und Winter.</p>
+</blockquote>
+<p>Seit ein paar Jahren sind auch Fernbusse (Busfahren zwischen Städten) in Deutschland möglich. Bus und Bahn sind Alternativen für alle, die kein eigenes Auto haben, z.B. für Studierende.</p>
+<p>Im folgenden Video vergleichen drei Studierende Bus und Bahn miteinander. Schauen Sie das Video und bearbeiten Sie dabei das <a href="material/arbeitsblatt-bus-bahn.pdf">Arbeitsblatt</a>.</p>
 <p><video src="material/video-bus-bahn.webm" controls=""><a href="material/video-bus-bahn.webm">Video</a></video></p>
-<time>00:40 – 00:50</time>
+<p>Welches Verkehrsmittel bevorzugen Sie: Bus oder Bahn? Und wieso? Teilen Sie Ihre Meinung im Plenum.</p>
+<time>00:45 – 00:50</time>
 <task>
 Pause
 </task>
 <br>
 <time>00:50 – 00:75</time>
 <task>
-4
+3
 </task>
-<p>Planen Sie jetzt eine Städtereise durch Deutschland in kleinen Gruppen. Besuchen Sie <strong>alle Städte</strong>, die Sie letzte Woche kennengelernt haben (<em>Berlin</em>, <em>München</em>, <em>Leipzig</em>, <em>Hamburg</em> und <em>Köln</em>). Suchen Sie online nach Reisemöglichkeiten und machen Sie einen detaillierten Reiseplan. Ihre Reise beginnt am 01. April 2023 und dauert zwei Wochen. Versuchen Sie entweder <strong>möglichst billig</strong> (Gesamtpreis für Transport) oder <strong>möglichst schnell</strong> (Gesamtzeit <em>on the road</em>) zu reisen.</p>
-<p>Ich stelle Ihnen einige nützliche Webseiten vor.</p>
-<p><a href="https://www.mitfahren.de/">https://www.mitfahren.de/</a>: Verschiedene Reisemöglichkeiten<br />
+<p>Planen Sie jetzt Ihre Reise in der Gruppe. Ich stelle Ihnen einige nützliche Webseiten vor.</p>
+<p><a href="https://www.check24.de/mietwagen/deutschland/vergleichen?wpset=google_mw&amp;keyword=auto%20mieten%20deutschland&amp;gclid=EAIaIQobChMI-KDmrPb9_QIVFCytBh0zxwDHEAAYASAAEgKe0_D_BwE">https://www.check24.de/mietwagen/</a>: Mietwagen<br />
+<a href="https://www.mitfahren.de/">https://www.mitfahren.de/</a>: Verschiedene Reisemöglichkeiten<br />
 <a href="https://www.blablacar.de/">https://www.blablacar.de/</a>: Mitfahrgelegenheiten (im Auto mitfahren)<br />
 <a href="https://www.flixbus.com/">https://www.flixbus.com/</a>: Fernbusse<br />
 <a href="https://www.bahn.de">https://www.bahn.de/p/view/index.shtml</a>: Deutsche Bahn<br />
 <a href="https://www.billigflieger.de/">https://www.billigflieger.de/</a>: Mit dem Flugzeug fliegen</p>
 <time>00:75 – 00:85</time>
 <task>
-5
+4
 </task>
 <p>Vergleichen Sie jetzt Ihre Reisepläne miteinander. Wer hat den billigsten, wer den schnellsten Reiseplan? Finden Sie jemanden, mit dem Sie sich in einer Stadt treffen können.</p>
 <time>00:85 – 00:90</time>
@@ -198,8 +197,8 @@ Hausaufgabe
           </div>
         </div>
       </div>
-<a href="urlaub-in-deutschland.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="urlaub-in-deutschland.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="lernen-in-deutschland.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
