add landeskunde arbeiten in deutschland

--- a/landeskunde/book/lernen-in-deutschland.html
+++ b/landeskunde/book/lernen-in-deutschland.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="reisen-in-deutschland.html"/>
-
+<link rel="next" href="arbeiten-in-deutschland.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -79,6 +79,7 @@
 <li class="chapter" data-level="5" data-path="urlaub-in-deutschland.html"><a href="urlaub-in-deutschland.html"><i class="fa fa-check"></i><b>5</b> Ab in den Urlaub!</a></li>
 <li class="chapter" data-level="6" data-path="reisen-in-deutschland.html"><a href="reisen-in-deutschland.html"><i class="fa fa-check"></i><b>6</b> Eine Reise durch Deutschland planen</a></li>
 <li class="chapter" data-level="7" data-path="lernen-in-deutschland.html"><a href="lernen-in-deutschland.html"><i class="fa fa-check"></i><b>7</b> Welcome to the Jungle: Lernen und studieren in Deutschland</a></li>
+<li class="chapter" data-level="8" data-path="arbeiten-in-deutschland.html"><a href="arbeiten-in-deutschland.html"><i class="fa fa-check"></i><b>8</b> Von Schufterei und Mühsal: Arbeiten in Deutschland</a></li>
 </ul>
 
       </nav>
@@ -229,8 +230,8 @@ Ende
           </div>
         </div>
       </div>
-<a href="reisen-in-deutschland.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="reisen-in-deutschland.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="arbeiten-in-deutschland.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
