--- a/landeskunde/book/reisen-in-deutschland.html
+++ b/landeskunde/book/reisen-in-deutschland.html
@@ -79,6 +79,7 @@
 <li class="chapter" data-level="5" data-path="urlaub-in-deutschland.html"><a href="urlaub-in-deutschland.html"><i class="fa fa-check"></i><b>5</b> Ab in den Urlaub!</a></li>
 <li class="chapter" data-level="6" data-path="reisen-in-deutschland.html"><a href="reisen-in-deutschland.html"><i class="fa fa-check"></i><b>6</b> Eine Reise durch Deutschland planen</a></li>
 <li class="chapter" data-level="7" data-path="lernen-in-deutschland.html"><a href="lernen-in-deutschland.html"><i class="fa fa-check"></i><b>7</b> Welcome to the Jungle: Lernen und studieren in Deutschland</a></li>
+<li class="chapter" data-level="8" data-path="arbeiten-in-deutschland.html"><a href="arbeiten-in-deutschland.html"><i class="fa fa-check"></i><b>8</b> Von Schufterei und Mühsal: Arbeiten in Deutschland</a></li>
 </ul>
 
       </nav>
