add landeskunde wurst wahn

--- a/landeskunde/book/arbeiten-in-deutschland.html
+++ b/landeskunde/book/arbeiten-in-deutschland.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="lernen-in-deutschland.html"/>
-
+<link rel="next" href="fleischeslust.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -54,6 +54,28 @@
 
 
 
+<style type="text/css">
+/* Used with Pandoc 2.11+ new --citeproc when CSL is used */
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+}
+.hanging div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}
+</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -80,6 +102,7 @@
 <li class="chapter" data-level="6" data-path="reisen-in-deutschland.html"><a href="reisen-in-deutschland.html"><i class="fa fa-check"></i><b>6</b> Eine Reise durch Deutschland planen</a></li>
 <li class="chapter" data-level="7" data-path="lernen-in-deutschland.html"><a href="lernen-in-deutschland.html"><i class="fa fa-check"></i><b>7</b> Welcome to the Jungle: Lernen und studieren in Deutschland</a></li>
 <li class="chapter" data-level="8" data-path="arbeiten-in-deutschland.html"><a href="arbeiten-in-deutschland.html"><i class="fa fa-check"></i><b>8</b> Von Schufterei und Mühsal: Arbeiten in Deutschland</a></li>
+<li class="chapter" data-level="9" data-path="fleischeslust.html"><a href="fleischeslust.html"><i class="fa fa-check"></i><b>9</b> Fleischeslust: Wurst oder keine Wurst?</a></li>
 </ul>
 
       </nav>
@@ -251,8 +274,8 @@ Ende
           </div>
         </div>
       </div>
-<a href="lernen-in-deutschland.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="lernen-in-deutschland.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="fleischeslust.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
