--- a/landeskunde/book/politische-geschichte.html
+++ b/landeskunde/book/politische-geschichte.html
@@ -54,28 +54,6 @@
 
 
 
-<style type="text/css">
-/* Used with Pandoc 2.11+ new --citeproc when CSL is used */
-div.csl-bib-body { }
-div.csl-entry {
-  clear: both;
-}
-.hanging div.csl-entry {
-  margin-left:2em;
-  text-indent:-2em;
-}
-div.csl-left-margin {
-  min-width:2em;
-  float:left;
-}
-div.csl-right-inline {
-  margin-left:2em;
-  padding-left:1em;
-}
-div.csl-indent {
-  margin-left: 2em;
-}
-</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -194,27 +172,27 @@ besinnlich - aktivierend<br />
 <tbody>
 <tr class="odd">
 <td><strong>1</strong></td>
-<td><img src="material/geschichte-bilder/1949-Gründung-DDR.jpg" style="width:90.0%" /></td>
-<td><img src="material/geschichte-bilder/1961-1989-Mauer.jpg" style="width:90.0%" /></td>
-<td><img src="material/geschichte-bilder/1961-Bau-Berliner-Mauer.jpg" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1949-Gr%C3%BCndung-DDR.png" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1961-1989-Mauer.png" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1961-Bau-Berliner-Mauer.png" style="width:90.0%" /></td>
 </tr>
 <tr class="even">
 <td><strong>2</strong></td>
-<td><img src="material/geschichte-bilder/1942-Ausdehnung-Deutsches-Reich.jpg" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1942-Ausdehnung-Deutsches-Reich.png" style="width:90.0%" /></td>
 <td><video src="material/geschichte-bilder/1945-Sprengung-Hakenkreuz.mp4" style="width:90.0%" controls=""><a href="material/geschichte-bilder/1945-Sprengung-Hakenkreuz.mp4">Video</a></video></td>
-<td><img src="material/geschichte-bilder/1945-Besatzungszonen.jpg" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1945-Besatzungszonen.png" style="width:90.0%" /></td>
 </tr>
 <tr class="odd">
 <td><strong>3</strong></td>
-<td><img src="material/geschichte-bilder/1936-Einmarsch-Rheinland.jpg" style="width:90.0%" /></td>
-<td><img src="material/geschichte-bilder/1961-Grenzpolizist.jpg" style="width:90.0%" /></td>
-<td><img src="material/geschichte-bilder/1943-Niederlage.jpg" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1936-Einmarsch-Rheinland.png" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1961-Grenzpolizist.png" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1943-Niederlage.png" style="width:90.0%" /></td>
 </tr>
 <tr class="even">
 <td><strong>4</strong></td>
-<td><img src="material/geschichte-bilder/1933-Hitler-Hindenburg-Handschlag.jpg" style="width:90.0%" /></td>
-<td><img src="material/geschichte-bilder/1933-Judenboykott.jpg" style="width:90.0%" /></td>
-<td><img src="material/geschichte-bilder/1945-Deutschland-Trümmer.jpg" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1933-Hitler-Hindenburg-Handschlag.png" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1933-Judenboykott.png" style="width:90.0%" /></td>
+<td><img src="material/geschichte-bilder/1945-Deutschland-Tr%C3%BCmmer.png" style="width:90.0%" /></td>
 </tr>
 </tbody>
 </table>
@@ -332,11 +310,6 @@ Hausaufgabe
 <li>Lesen Sie in <em>Tatsachen über Deutschland</em> die Seiten 36-37 über Erinnerungskultur in Deutschland.</li>
 </ul>
 
-<div id="refs" class="references csl-bib-body hanging-indent">
-<div class="csl-entry">
-Hamann, Eva, Christine Magosch, Caterina Mempel, Björn Vondran, und Rebecca Zabel. 2016. <em>Mitreden</em>. Klett Sprachen GmbH. <a href="https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html">https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html</a>.
-</div>
-</div>
 </div>
             </section>
 
