--- a/landeskunde/book/politische-geschichte.html
+++ b/landeskunde/book/politische-geschichte.html
@@ -54,6 +54,28 @@
 
 
 
+<style type="text/css">
+/* Used with Pandoc 2.11+ new --citeproc when CSL is used */
+div.csl-bib-body { }
+div.csl-entry {
+  clear: both;
+}
+.hanging div.csl-entry {
+  margin-left:2em;
+  text-indent:-2em;
+}
+div.csl-left-margin {
+  min-width:2em;
+  float:left;
+}
+div.csl-right-inline {
+  margin-left:2em;
+  padding-left:1em;
+}
+div.csl-indent {
+  margin-left: 2em;
+}
+</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -280,7 +302,7 @@ Pause
 4
 </task>
 <p>Über Jahrzehnte wird das ehemalige Deutschland von einer Mauer geteilt. Schon 1949 malt ein Zeichner folgende Bilder. Was bemerken Sie? Sprechen Sie in der Gruppe und sammeln Sie dann Gedanken im Plenum.</p>
-<p><img src="material/geschichte-bilder/Karikatur-Deutscher-Michel.jpg" style="width:66.0%" /></p>
+<p><img src="material/geschichte-bilder/Karikatur-Deutscher-Michel.png" style="width:66.0%" /></p>
 <blockquote>
 <p>Die Bilder zeigen …<br />
 Meiner Meinung nach ist damit gemeint, dass …<br />
@@ -310,6 +332,11 @@ Hausaufgabe
 <li>Lesen Sie in <em>Tatsachen über Deutschland</em> die Seiten 36-37 über Erinnerungskultur in Deutschland.</li>
 </ul>
 
+<div id="refs" class="references csl-bib-body hanging-indent">
+<div class="csl-entry">
+Hamann, Eva, Christine Magosch, Caterina Mempel, Björn Vondran, und Rebecca Zabel. 2016. <em>Mitreden</em>. Klett Sprachen GmbH. <a href="https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html">https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html</a>.
+</div>
+</div>
 </div>
             </section>
 
