--- a/landeskunde/book/politische-geschichte.html
+++ b/landeskunde/book/politische-geschichte.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="fleischeslust.html"/>
-
+<link rel="next" href="politik-erleben.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -54,28 +54,6 @@
 
 
 
-<style type="text/css">
-/* Used with Pandoc 2.11+ new --citeproc when CSL is used */
-div.csl-bib-body { }
-div.csl-entry {
-  clear: both;
-}
-.hanging div.csl-entry {
-  margin-left:2em;
-  text-indent:-2em;
-}
-div.csl-left-margin {
-  min-width:2em;
-  float:left;
-}
-div.csl-right-inline {
-  margin-left:2em;
-  padding-left:1em;
-}
-div.csl-indent {
-  margin-left: 2em;
-}
-</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -104,6 +82,7 @@ div.csl-indent {
 <li class="chapter" data-level="8" data-path="arbeiten-in-deutschland.html"><a href="arbeiten-in-deutschland.html"><i class="fa fa-check"></i><b>8</b> Von Schufterei und Mühsal: Arbeiten in Deutschland</a></li>
 <li class="chapter" data-level="9" data-path="fleischeslust.html"><a href="fleischeslust.html"><i class="fa fa-check"></i><b>9</b> Fleischeslust: Wurst oder keine Wurst?</a></li>
 <li class="chapter" data-level="10" data-path="politische-geschichte.html"><a href="politische-geschichte.html"><i class="fa fa-check"></i><b>10</b> Politische Geschichte Deutschlands</a></li>
+<li class="chapter" data-level="11" data-path="politik-erleben.html"><a href="politik-erleben.html"><i class="fa fa-check"></i><b>11</b> Politik erleben</a></li>
 </ul>
 
       </nav>
@@ -332,19 +311,14 @@ Hausaufgabe
 <li>Lesen Sie in <em>Tatsachen über Deutschland</em> die Seiten 36-37 über Erinnerungskultur in Deutschland.</li>
 </ul>
 
-<div id="refs" class="references csl-bib-body hanging-indent">
-<div class="csl-entry">
-Hamann, Eva, Christine Magosch, Caterina Mempel, Björn Vondran, und Rebecca Zabel. 2016. <em>Mitreden</em>. Klett Sprachen GmbH. <a href="https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html">https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html</a>.
-</div>
-</div>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-<a href="fleischeslust.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="fleischeslust.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="politik-erleben.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
