--- a/landeskunde/book/404.html
+++ b/landeskunde/book/404.html
@@ -54,28 +54,6 @@
 
 
 
-<style type="text/css">
-/* Used with Pandoc 2.11+ new --citeproc when CSL is used */
-div.csl-bib-body { }
-div.csl-entry {
-  clear: both;
-}
-.hanging div.csl-entry {
-  margin-left:2em;
-  text-indent:-2em;
-}
-div.csl-left-margin {
-  min-width:2em;
-  float:left;
-}
-div.csl-right-inline {
-  margin-left:2em;
-  padding-left:1em;
-}
-div.csl-indent {
-  margin-left: 2em;
-}
-</style>
 
 <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
@@ -104,6 +82,7 @@ div.csl-indent {
 <li class="chapter" data-level="8" data-path="arbeiten-in-deutschland.html"><a href="arbeiten-in-deutschland.html"><i class="fa fa-check"></i><b>8</b> Von Schufterei und Mühsal: Arbeiten in Deutschland</a></li>
 <li class="chapter" data-level="9" data-path="fleischeslust.html"><a href="fleischeslust.html"><i class="fa fa-check"></i><b>9</b> Fleischeslust: Wurst oder keine Wurst?</a></li>
 <li class="chapter" data-level="10" data-path="politische-geschichte.html"><a href="politische-geschichte.html"><i class="fa fa-check"></i><b>10</b> Politische Geschichte Deutschlands</a></li>
+<li class="chapter" data-level="11" data-path="politik-erleben.html"><a href="politik-erleben.html"><i class="fa fa-check"></i><b>11</b> Politik erleben</a></li>
 </ul>
 
       </nav>
