--- a/landeskunde/book/fleischeslust.html
+++ b/landeskunde/book/fleischeslust.html
@@ -104,6 +104,7 @@ div.csl-indent {
 <li class="chapter" data-level="8" data-path="arbeiten-in-deutschland.html"><a href="arbeiten-in-deutschland.html"><i class="fa fa-check"></i><b>8</b> Von Schufterei und Mühsal: Arbeiten in Deutschland</a></li>
 <li class="chapter" data-level="9" data-path="fleischeslust.html"><a href="fleischeslust.html"><i class="fa fa-check"></i><b>9</b> Fleischeslust: Wurst oder keine Wurst?</a></li>
 <li class="chapter" data-level="10" data-path="politische-geschichte.html"><a href="politische-geschichte.html"><i class="fa fa-check"></i><b>10</b> Politische Geschichte Deutschlands</a></li>
+<li class="chapter" data-level="11" data-path="politik-erleben.html"><a href="politik-erleben.html"><i class="fa fa-check"></i><b>11</b> Politik erleben</a></li>
 </ul>
 
       </nav>
