--- a/landeskunde/book/404.html
+++ b/landeskunde/book/404.html
@@ -83,6 +83,8 @@
 <li class="chapter" data-level="9" data-path="fleischeslust.html"><a href="fleischeslust.html"><i class="fa fa-check"></i><b>9</b> Fleischeslust: Wurst oder keine Wurst?</a></li>
 <li class="chapter" data-level="10" data-path="politische-geschichte.html"><a href="politische-geschichte.html"><i class="fa fa-check"></i><b>10</b> Politische Geschichte Deutschlands</a></li>
 <li class="chapter" data-level="11" data-path="politik-erleben.html"><a href="politik-erleben.html"><i class="fa fa-check"></i><b>11</b> Politik erleben</a></li>
+<li class="chapter" data-level="12" data-path="bundestagswahl.html"><a href="bundestagswahl.html"><i class="fa fa-check"></i><b>12</b> Bundestagswahl 2021</a></li>
+<li class="chapter" data-level="13" data-path="heimatmuseum.html"><a href="heimatmuseum.html"><i class="fa fa-check"></i><b>13</b> Heimatmuseum</a></li>
 </ul>
 
       </nav>
