add sprachtypologie geschichte to landeskunde

--- a/landeskunde/book/heimatmuseum.html
+++ b/landeskunde/book/heimatmuseum.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="bundestagswahl.html"/>
-
+<link rel="next" href="sprachgeschichte-typologie.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -107,6 +107,7 @@ div.csl-indent {
 <li class="chapter" data-level="11" data-path="politik-erleben.html"><a href="politik-erleben.html"><i class="fa fa-check"></i><b>11</b> Politik erleben</a></li>
 <li class="chapter" data-level="12" data-path="bundestagswahl.html"><a href="bundestagswahl.html"><i class="fa fa-check"></i><b>12</b> Bundestagswahl 2021</a></li>
 <li class="chapter" data-level="13" data-path="heimatmuseum.html"><a href="heimatmuseum.html"><i class="fa fa-check"></i><b>13</b> Heimatmuseum</a></li>
+<li class="chapter" data-level="14" data-path="sprachgeschichte-typologie.html"><a href="sprachgeschichte-typologie.html"><i class="fa fa-check"></i><b>14</b> Deutsch: Geschichte und Typologie</a></li>
 </ul>
 
       </nav>
@@ -205,19 +206,14 @@ text-align: center;
 </div>
 </div>
 
-<div id="refs" class="references csl-bib-body hanging-indent">
-<div class="csl-entry">
-Hamann, Eva, Christine Magosch, Caterina Mempel, Björn Vondran, und Rebecca Zabel. 2016. <em>Mitreden</em>. Klett Sprachen GmbH. <a href="https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html">https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html</a>.
-</div>
-</div>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-<a href="bundestagswahl.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="bundestagswahl.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="sprachgeschichte-typologie.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
