--- a/landeskunde/book/404.html
+++ b/landeskunde/book/404.html
@@ -107,6 +107,7 @@ div.csl-indent {
 <li class="chapter" data-level="11" data-path="politik-erleben.html"><a href="politik-erleben.html"><i class="fa fa-check"></i><b>11</b> Politik erleben</a></li>
 <li class="chapter" data-level="12" data-path="bundestagswahl.html"><a href="bundestagswahl.html"><i class="fa fa-check"></i><b>12</b> Bundestagswahl 2021</a></li>
 <li class="chapter" data-level="13" data-path="heimatmuseum.html"><a href="heimatmuseum.html"><i class="fa fa-check"></i><b>13</b> Heimatmuseum</a></li>
+<li class="chapter" data-level="14" data-path="sprachgeschichte-typologie.html"><a href="sprachgeschichte-typologie.html"><i class="fa fa-check"></i><b>14</b> Deutsch: Geschichte und Typologie</a></li>
 </ul>
 
       </nav>
