--- a/landeskunde/book/sprachgeschichte-typologie.html
+++ b/landeskunde/book/sprachgeschichte-typologie.html
@@ -30,7 +30,7 @@
   
   
 <link rel="prev" href="heimatmuseum.html"/>
-
+<link rel="next" href="film.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -108,6 +108,7 @@ div.csl-indent {
 <li class="chapter" data-level="12" data-path="bundestagswahl.html"><a href="bundestagswahl.html"><i class="fa fa-check"></i><b>12</b> Bundestagswahl 2021</a></li>
 <li class="chapter" data-level="13" data-path="heimatmuseum.html"><a href="heimatmuseum.html"><i class="fa fa-check"></i><b>13</b> Heimatmuseum</a></li>
 <li class="chapter" data-level="14" data-path="sprachgeschichte-typologie.html"><a href="sprachgeschichte-typologie.html"><i class="fa fa-check"></i><b>14</b> Deutsch: Geschichte und Typologie</a></li>
+<li class="chapter" data-level="15" data-path="film.html"><a href="film.html"><i class="fa fa-check"></i><b>15</b> Film</a></li>
 </ul>
 
       </nav>
@@ -259,19 +260,14 @@ Lösung Aufgabe Sprachfamilie
 <p><strong>Hausaufgabe</strong></p>
 <p>Lesen Sie in <em>Tatsachen über Deutschland</em> die Seiten 152 und 153 über die deutsche Sprache.</p>
 
-<div id="refs" class="references csl-bib-body hanging-indent">
-<div class="csl-entry">
-Hamann, Eva, Christine Magosch, Caterina Mempel, Björn Vondran, und Rebecca Zabel. 2016. <em>Mitreden</em>. Klett Sprachen GmbH. <a href="https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html">https://www.ebook.de/de/product/22015053/eva_hamann_christine_magosch_caterina_mempel_bjoern_vondran_rebecca_zabel_mitreden.html</a>.
-</div>
-</div>
 </div>
             </section>
 
           </div>
         </div>
       </div>
-<a href="heimatmuseum.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="heimatmuseum.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="film.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
