--- a/sprachspielereien/einheiten/beschreiben-sich-andere.html
+++ b/sprachspielereien/einheiten/beschreiben-sich-andere.html
@@ -121,19 +121,19 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <p>Was finden Sie an diesen Frauen schön? Sprechen Sie mit Ihrer Partnerin und sammeln Sie im Plenum.</p>
 <div class="row">
 <div class="column">
-<img src="_images/img_woman_01.png" class='side-by-side-image' />
+<img src="images/img_woman_01.png" class='side-by-side-image' />
 </div>
 <div class="column">
-<img src="_images/img_woman_02.png" class='side-by-side-image' />
+<img src="images/img_woman_02.png" class='side-by-side-image' />
 </div>
 <div class="column">
-<img src="_images/img_woman_03.png" class='side-by-side-image' />
+<img src="images/img_woman_03.png" class='side-by-side-image' />
 </div>
 <div class="column">
-<img src="_images/img_woman_04.png" class='side-by-side-image' />
+<img src="images/img_woman_04.png" class='side-by-side-image' />
 </div>
 <div class="column">
-<img src="_images/img_woman_05.png" class='side-by-side-image' />
+<img src="images/img_woman_05.png" class='side-by-side-image' />
 </div>
 </div>
 <blockquote>
@@ -145,7 +145,7 @@ Lippen, Mund, Nase, Ohren, Haare, Hände, Beine, Zähne, Haut, Gesicht, Hals, Fi
 <task>
 2
 </task>
-<p>Schauen Sie jetzt das <a href="_material/Video-schön.mp4">Video</a> an. Die Interviewten sind Frauen im Alter zwischen 9 und 71 Jahren. Sie beantworten die Frage: <em>Was finden Sie an sich selbst schön?</em> Notieren Sie die Antworten. Stimmen die Frauen mit Ihnen überein?</p>
+<p>Schauen Sie jetzt das Video (<a href="https://e.pcloud.link/publink/show?code=XZbt22ZGdYAPOVTsafjIEE98txawkUwuW6V">online</a>, <a href="external_videos/video_schoen.mp4">lokal</a>) an. Die Interviewten sind Frauen im Alter zwischen 9 und 71 Jahren. Sie beantworten die Frage: <em>Was finden Sie an sich selbst schön?</em> Notieren Sie die Antworten. Stimmen die Frauen mit Ihnen überein?</p>
 <time>00:30 – 00:40</time>
 <task>
 3
