--- a/sprachspielereien/einheiten/erzählen-ferien.html
+++ b/sprachspielereien/einheiten/erzählen-ferien.html
@@ -123,12 +123,12 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <task>
 2
 </task>
-<p>Jetzt erzählen drei Schüler von ihren Ferien. Hören Sie und notieren Sie: Wo haben die drei Ferien gemacht? Was haben sie in den Ferien gemacht? <a href="_audios/Audio-erzählen-Urlaub-A1.mp3">Audio 1</a> <a href="_audios/Audio-erzählen-Urlaub-A2.mp3">Audio 2</a> <a href="_audios/Audio-erzählen-Urlaub-B1.mp3">Audio 3</a></p>
+<p>Jetzt erzählen drei Schüler von ihren Ferien. Hören Sie und notieren Sie: Wo haben die drei Ferien gemacht? Was haben sie in den Ferien gemacht? <a href="audios/Audio-erzählen-Urlaub-A1.mp3">Audio 1</a> <a href="audios/Audio-erzählen-Urlaub-A2.mp3">Audio 2</a> <a href="audios/Audio-erzählen-Urlaub-B1.mp3">Audio 3</a></p>
 <time>00:30 – 00:45</time>
 <task>
 3
 </task>
-<p>Hören Sie <a href="_audios/Audio-erzählen-Urlaub-A1.mp3">Audio 1</a> und <a href="_audios/Audio-erzählen-Urlaub-A2.mp3">Audio 2</a> noch einmal und markieren Sie alle Verben in den Texten. Vergleichen Sie dann alle Verben miteinander. Welches grammatische Muster haben Sie gefunden?</p>
+<p>Hören Sie <a href="audios/Audio-erzählen-Urlaub-A1.mp3">Audio 1</a> und <a href="audios/Audio-erzählen-Urlaub-A2.mp3">Audio 2</a> noch einmal und markieren Sie alle Verben in den Texten. Vergleichen Sie dann alle Verben miteinander. Welches grammatische Muster haben Sie gefunden?</p>
 <details>
 <summary>
 Transkripte Audios 1 und 2
@@ -157,13 +157,13 @@ Transkripte Audio 3
 4
 </task>
 <p>Schauen Sie sich den folgenden Comic an. Was hat die Frau in den Ferien gemacht? Erzählen Sie gemeinsam mit Ihrem Partner. Sie beginnen, dann ihr Partner, wieder Sie, usw. Finden Sie dann einen anderen Partner und erzählen Sie die Geschichte noch einmal. Diesmal beginnt Ihr Partner.</p>
-<p><img src="_images/Bildergeschichte-Urlaub.jpg" width="90%" /></p>
+<p><img src="images/Bildergeschichte-Urlaub.jpg" width="90%" /></p>
 <time>00:65 – 00:80</time>
 <task>
 5
 </task>
 <p>Besuchen Sie mit Ihrem Partner <em>Story Dice</em> (<a href="https://davebirss.com/storydice/">https://davebirss.com/storydice/</a>) online. Die Webseite würfelt für Sie und Sie erhalten neun zufällige Bilder. <strong>Machen Sie einen Screenshot für später</strong>. Wählen Sie <strong>acht Bilder</strong> aus. Erfinden Sie passend zu den Bildern eine Ferien-Geschichte.</p>
-<p><img src="_images/qr_storydice.png" width="100px" /></p>
+<p><img src="images/qr_storydice.png" width="100px" /></p>
 <time>00:80 – 00:90</time>
 <task>
 6
