--- a/sprachspielereien/einheiten/erzählen-leben.html
+++ b/sprachspielereien/einheiten/erzählen-leben.html
@@ -123,7 +123,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 <task>
 2
 </task>
-<p>Hören Sie jetzt das <a href="_material/Audio-erzählen-Porträt-Merkel.mp3">Audio</a> über das Leben von Angela Merkel. Notieren Sie alle Jahreszahlen, die Sie hören. Hören Sie den Beitrag dann noch einmal und notieren Sie auf einem Zeitstrahl: Was hat Merkel in diesen Jahren gemacht oder erlebt? Was erfahren Sie sonst noch über sie?</p>
+<p>Hören Sie jetzt das <a href="audios/Audio-erzählen-Porträt-Merkel.mp3">Audio</a> über das Leben von Angela Merkel. Notieren Sie alle Jahreszahlen, die Sie hören. Hören Sie den Beitrag dann noch einmal und notieren Sie auf einem Zeitstrahl: Was hat Merkel in diesen Jahren gemacht oder erlebt? Was erfahren Sie sonst noch über sie?</p>
 <details>
 <summary>
 Transkript
