--- a/sprachspielereien/einheiten/erzählen-schulzeit.html
+++ b/sprachspielereien/einheiten/erzählen-schulzeit.html
@@ -119,12 +119,12 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 1
 </task>
 <p>Sehen Sie sich das Bild an und erinnern Sie sich an Ihre Schulzeit. Was fällt Ihnen ein? Schreiben Sie ein Stichwort an die Tafel.</p>
-<p><img src="_material/Bild-Schule.jpeg" /></p>
+<p><img src="images/Bild-Schule.jpeg" /></p>
 <time>00:10 – 00:40</time>
 <task>
 2
 </task>
-<p>Jetzt erzählen die zwei deutsche Studentinnen Franziska und Julia von ihrer Schulzeit. Hören Sie und notieren Sie: Wie war die Schulzeit? Welche Fächer hatten sie gern? Was haben sie in der Schule gemacht? Ergänzen Sie an der Tafel. <a href="_material/Audio-erzählen-Schulzeit-A2.mp3">Audio 1</a> <a href="_material/Audio-erzählen-Schulzeit-B1.mp3">Audio 2</a></p>
+<p>Jetzt erzählen die zwei deutsche Studentinnen Franziska und Julia von ihrer Schulzeit. Hören Sie und notieren Sie: Wie war die Schulzeit? Welche Fächer hatten sie gern? Was haben sie in der Schule gemacht? Ergänzen Sie an der Tafel. <a href="audios/Audio-erzählen-Schulzeit-A2.mp3">Audio 1</a> <a href="audios/Audio-erzählen-Schulzeit-B1.mp3">Audio 2</a></p>
 <p>Hören Sie noch einmal und beantworten Sie folgende Fragen. Hören Sie noch einmal mit Transkript und achten sie bei Julia beim Hören auf die vielen Verschleifungen in ihrer Aussprache.</p>
 <table>
 <tbody>
