--- a/sprachspielereien/einheiten/index.html
+++ b/sprachspielereien/einheiten/index.html
@@ -118,10 +118,10 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 </div>
 <div id="einleitung" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> Einleitung<a href="index.html#einleitung" class="anchor-section" aria-label="Anchor link to header"></a></h1>
-<p><img src="_images/sprechen.png" style="width:50.0%" /></p>
+<p><img src="images/sprechen.png" style="width:50.0%" /></p>
 <p>Herzlich willkommen im Kurs <em>Gespräche (und verwandte Sprachspiele) in DaF</em>! Der Kurs ist eigentlich kein einheitlicher Kurs mit Anfang und Ende und einer bestimmten Progression, sondern eine Sammlung verschiedener Übungseinheiten. Sie müssen verschiedene Aufgaben machen und dabei Deutsch benutzen. Jede Einheit hat ein anderes Thema, eine anderen grammatischen Schwerpunkt und übt eine andere kommunikative Funktion.</p>
 <p>Sie arbeiten allein, mit Ihrer Partnerin, in Gruppen oder zusammen mit mir. <strong>Sprechen Sie</strong> dabei <strong>nicht</strong> immer <strong>Chinesisch</strong>. Sprechen Sie <strong>Deutsch</strong>, so viel und so oft Sie können!</p>
-<p><img src="_images/deutsch-tshirt.jpg" style="width:50.0%" /></p>
+<p><img src="images/deutsch-tshirt.jpg" style="width:50.0%" /></p>
 <div id="lernziele" class="section level2 unlisted unnumbered hasAnchor">
 <h2>Lernziele<a href="index.html#lernziele" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Sie sind schon in der Lage, sich sprachlich auszudrücken und Deutsch zu benutzen (etwas beschreiben, zwei Dinge vergleichen, ein Argument begründen, Ihre Meinung ausdrücken usw.). In diesem Kurs sollen Sie vor allem üben und Ihre gelernten Fertigkeiten verbessern.</p>
