--- a/sprachspielereien/einheiten/erzählen-schulzeit.html
+++ b/sprachspielereien/einheiten/erzählen-schulzeit.html
@@ -82,7 +82,7 @@ var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(app, s);
 
 <ul class="summary">
 <li><a href="./">Gespräche (und verwandte Sprachspiele) in DaF</a></li>
-<img src="./_images/sprechen.png" style="width:100%;">
+<img src="./images/sprechen.png" style="width:100%;">
 
 <li class="divider"></li>
 <li class="chapter" data-level="1" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i><b>1</b> Einleitung</a></li>
